--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -66,3 +66,26 @@
     }
 
 }
+
+@media (min-width: 1023px){
+    .skill_icon .firebase {
+        max-width: 82px;
+        max-height: 82px;
+    }
+}
+
+@media (min-width: 1400px){
+    .skill_icon .firebase {
+        max-width: 102px;
+        max-height: 102px;
+    }
+}
+
+@media (min-width: 1919px){
+    .skill_icon .firebase {
+        max-width: 116px;
+        max-height: 116px;
+    }
+}
+
+
