--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -37,7 +37,8 @@
 
 .button_cv {
     margin: 10% auto 0 auto;
-    width: 175px;
+    // width: 175px;
+    width: 30%;
     @include box-shadow(0, 2px, 2px, 0.6);
 }
 
