--- a/styles/partials/_portfolio.scss
+++ b/styles/partials/_portfolio.scss
@@ -27,7 +27,8 @@
             // justify-content: space-around;
         }
         button {
-            width: 100px;
+            // width: 100px;
+            width: 30%;
             @include box-shadow(0, 2px, 2px, 0.6);
             display: inline-block;
         }
