--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -74,18 +74,18 @@
     }
 }
 
-@media (min-width: 1400px){
-    .skill_icon .firebase {
-        max-width: 102px;
-        max-height: 102px;
-    }
-}
+// @media (min-width: 1400px){
+//     .skill_icon .firebase {
+//         max-width: 102px;
+//         max-height: 102px;
+//     }
+// }
 
-@media (min-width: 1919px){
-    .skill_icon .firebase {
-        max-width: 116px;
-        max-height: 116px;
-    }
-}
+// @media (min-width: 1919px){
+//     .skill_icon .firebase {
+//         max-width: 116px;
+//         max-height: 116px;
+//     }
+// }
 
 
