--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -8,10 +8,6 @@
     }
 }
 
-.about_text {
-    padding-top: 2.5vh;
-}
-
 .about_text p:first-of-type {
     margin-top: 12.5%;
 }
@@ -37,8 +33,7 @@
 
 .button_cv {
     margin: 10% auto 0 auto;
-    // width: 175px;
-    width: 30%;
+    min-width: 30%;
     @include box-shadow(0, 2px, 2px, 0.6);
 }
 
@@ -55,7 +50,7 @@
 
     .about_pic {
         border-radius: 10px;
-        flex-basis: 35%;
+        flex-basis: 30%;
         height: 100%;
         margin: 0;
     }
