--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './partials/_portfolio.scss';
 @import './partials/_contact.scss';
 @import './partials/_footer.scss';
+@import './partials/thank.scss';
