--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5177,10 +5177,12 @@ form {
     -ms-flex-pack: justify;
     justify-content: space-between; }
     form .contact_icons p {
-      padding-left: 2.5%;
+      padding-left: 0.75rem;
       display: inline-block;
       font-size: 0.7rem;
       letter-spacing: 0.05rem; }
+    form .contact_twitter p {
+      padding-left: 0.625rem; }
   .contact form button {
     width: 35%;
     margin: 0; }
@@ -5211,5 +5213,40 @@ footer {
 @media (min-width: 1023px) {
   footer {
     margin-top: 9%; } }
+
+#thanks {
+  background-image: url("../assets/ales-nesetril-734016-unsplash.jpg");
+  background-size: cover;
+  background-position-y: 15%; }
+  #thanks h2 {
+    color: #fff; }
+  #thanks .link_home {
+    position: relative;
+    z-index: 20;
+    -webkit-transition: color 0.25s, border 0.25s;
+    -o-transition: color 0.25s, border 0.25s;
+    transition: color 0.25s, border 0.25s; }
+  #thanks .link_home:hover .back {
+    color: #ff4757; }
+  #thanks .link_home:hover .back_text {
+    border-bottom: 1px solid #ff4757; }
+  #thanks .back {
+    margin-right: 1.25%; }
+  #thanks .back_text {
+    padding-bottom: 0.125rem;
+    border-bottom: 1px solid transparent; }
+
+.thanks_fullbleed::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 10;
+  background: rgba(158, 156, 156, 0.2); }
+
+.thanks_container {
+  padding-top: 10vh; }
 
 /*# sourceMappingURL=styles.css.map */
