--- a/styles/partials/_hamburger.scss
+++ b/styles/partials/_hamburger.scss
@@ -1,11 +1,11 @@
 .hamburger {
 display: inline-block;
 cursor: pointer;
-transition-property: background-color, filter;
+transition-property: filter;
 transition-duration: 0.5s;
 transition-timing-function: linear;
 font: inherit;
-color: inherit;
+color: $text-color;
 text-transform: none;
 background-color: transparent;
 border: 0;
@@ -19,7 +19,6 @@ overflow: visible; }
 .hamburger.is_active .hamburger_inner::before,
 .hamburger.is_active .hamburger_inner::after {
     background-color: $text-color; }
-    
 
 .hamburger_box {
 width: 25px;
